# cyber-settings

./: CMakeLists.txt  README.md
src/: about.cpp  about.h  appearance.cpp  appearance.h  application.cpp  background.cpp  background.h  battery.cpp  battery.h  brightness.cpp  brightness.h  fontsmodel.cpp  fontsmodel.h  language.cpp  language.h  main.cpp  password.cpp  resources.qrc  version.h.in
src/networkmanager/: connectionicon.cpp  networking.cpp  networking.h  networkmodel.cpp  networkmodelitem.cpp  networkmodelitem.h  uiutils.cpp  wirelessitemsettings.cpp
src/qml/: AboutPage.qml  AccountsPage.qml  AddUserDialog.qml  AppearancePage.qml  BackgroundPage.qml  BatteryItem.qml  BatteryPage.qml  DisplayPage.qml  DockPage.qml  GeneralPage.qml  Hideable.qml  HorizontalDivider.qml  IconCheckBox.qml  ItemPage.qml  LanguagePage.qml  NetworkPage.qml  RotationButton.qml  Scrollable.qml  SideBar.qml  StandardItem.qml  WiredItem.qml  WirelessDetailsDialog.qml  WirelessDetailsPage.qml  WirelessDetailsWindow.qml  WirelessItem.qml  WiressItem.qml  main.qml
translations/: af_ZA.ts  ar_AA.ts  ar_SA.ts  az_AZ.ts  ca_ES.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  el_GR.ts  en_US.ts  es_ES.ts  es_MX.ts  et_EE.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  it-IT.ts  it.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  lt_LT.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  nl_NL.ts  no_NO.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sr_Cyrl.ts  sr_RS.ts  sv_SE.ts  (+10 more)
